--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "babel-node test.js",
     "lint": "standard",
     "compile": "babel -d dist/ src/",
-    "prepublish": "npm run compile"
+    "prepublish": "npm run lint && npm test && npm run compile"
   },
   "pre-commit": [
     "lint",
@@ -31,9 +31,10 @@
   },
   "homepage": "https://github.com/layflags/number-to-css-color#readme",
   "devDependencies": {
-    "babel": "^5.8.23",
+    "babel-cli": "^6.10.1",
+    "babel-preset-es2015": "^6.9.0",
     "pre-commit": "^1.1.1",
-    "standard": "^5.3.1",
+    "standard": "^7.1.2",
     "tape": "^4.2.0"
   }
 }
